[package]
name = "site"
version = "0.1.0"
edition = "2021"

[dependencies]
livid = "0.2.13"
pulldown-cmark = "0.9.1"
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.31"

[dependencies.web-sys]
version = "0.3.58"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]